--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,5 +27,16 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+    
+
+    - name: Set Firebase config as environment variable
+        env:
+          FIREBASE_CONFIG: ${{ secrets.FB_SECRET_KEY }}
+  
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+        run: mvn -B package --file pom.xml
+    
+    - name: Run Tests with Maven
+      run: mvn test
+      env:
+        FIREBASE_CONFIG: ${{ secrets.FB_SECRET_KEY }}
