--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,8 +30,7 @@ jobs:
     
 
     - name: Set Firebase config as environment variable
-        env:
-          FIREBASE_CONFIG: ${{ secrets.FB_SECRET_KEY }}
+        run: echo '${{ secrets.FIREBASE_CONFIG }}' > ./firebase_config.json
   
     - name: Build with Maven
         run: mvn -B package --file pom.xml
