--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,11 +1,3 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Java CI with Maven
 
 on:
@@ -29,12 +21,11 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
+      - name: List files in the workspace (for debugging)
+        run: ls -la
+
       - name: Build with Maven
         run: mvn -B package --file pom.xml
-        env:
-          FIREBASE_CONFIG: ${{ secrets.FB_SECRET_KEY }}
 
       - name: Run Tests with Maven
         run: mvn test
-        env:
-          FIREBASE_CONFIG: ${{ secrets.FB_SECRET_KEY }}
