--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,9 +26,13 @@ jobs:
 
       - name: Build with Maven
         run: mvn -B package --file pom.xml
+        env:
+          FIREBASE_CONFIG: ${{ secrets.FB_SECRET_KEY }}
 
       - name: Run Tests with Maven
         run: mvn test
+        env:
+          FIREBASE_CONFIG: ${{ secrets.FB_SECRET_KEY }}
 
       - name: Print Environment Variables
         run: printenv
