--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,15 +21,32 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: List files in the workspace (for debugging)
-        run: ls -la
+      - name: Check for firebase_config.json
+        run: |
+          if [ -f "./firebase_config.json" ]; then
+            echo "firebase_config.json exists"
+          else
+            echo "firebase_config.json does not exist"
+          fi
 
       - name: Print debug info
+        run: |
+          echo "FIREBASE_CONFIG is set: ${{ secrets.FB_SECRET_KEY != '' }}"
+          echo "Length of FIREBASE_CONFIG: ${#FIREBASE_CONFIG}"
+          echo "First 10 characters of FIREBASE_CONFIG: ${FIREBASE_CONFIG:0:10}..."
         env:
           ACTIONS_STEP_DEBUG: true
+          FIREBASE_CONFIG: ${{ secrets.FB_SECRET_KEY }}
+
+      - name: Check FIREBASE_CONFIG
         run: |
-          echo "FIREBASE_CONFIG is set: ${{ secrets.FIREBASE_CONFIG != '' }}"
-          echo "Length of FIREBASE_CONFIG: ${#FIREBASE_CONFIG}"
+          if [ -z "$FIREBASE_CONFIG" ]; then
+            echo "FIREBASE_CONFIG is not set"
+          else
+            echo "FIREBASE_CONFIG is set"
+          fi
+        env:
+          FIREBASE_CONFIG: ${{ secrets.FB_SECRET_KEY }}
 
       - name: Build with Maven
         run: mvn -B package --file pom.xml
