--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,11 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+			   <groupId>com.google.cloud.tools</groupId>
+   				<artifactId>appengine-maven-plugin</artifactId>
+   				<version>2.7.0</version>
+			</plugin>
 		</plugins>
 	</build>
 
