feat: implement the interface page to make api call

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "cors-anywhere": "^0.4.4",
     "firebase": "^10.14.1",
     "firebase-cli": "^1.2.0",
     "firebaseui": "^6.1.0",
