--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,6 +19,9 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
+      
+      - name: Install Newman
+        run: npm install -g newman
 
       - name: Build with Maven
         run: mvn -B package --file pom.xml
