--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,27 @@
    				<artifactId>appengine-maven-plugin</artifactId>
    				<version>2.7.0</version>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-pmd-plugin</artifactId>
+				<version>3.21.2</version>
+				<configuration>
+					<printFailingErrors>true</printFailingErrors>
+					<verbose>true</verbose>
+					<minimumPriority>3</minimumPriority>
+					<rulesets>
+						<ruleset>rulesets/java/quickstart.xml</ruleset>
+					</rulesets>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>check</goal>
+							<goal>cpd-check</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
