--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -66,7 +66,7 @@ jobs:
       - name: Run Checkstyle
         run: |
           mkdir -p coveragereport/checkstyle  # Create folder for Checkstyle reports
-          mvn checkstyle:checkstyle -Dcheckstyle.output.format=xml -DoutputFile=coveragereport/checkstyle/checkstyle-report.xml || true
+          mvn checkstyle:check > coveragereport/checkstyle/checkstyle_report.txt || true
         env:
           FIREBASE_CONFIG: ${{ secrets.FB_SECRET_KEY }}
           CI: true
