--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -2,10 +2,12 @@ name: Java CI with Maven
 
 on:
   push:
-    branches-ignore:
+    branches:
+      - '**' 
+  pull_request:
+    branches:
       - main
-    pull_request:
-    workflow_dispatch:
+  workflow_dispatch:
 
 jobs:
   build:
@@ -23,6 +25,19 @@ jobs:
           distribution: 'temurin'
           cache: maven
       
+      - name: Check if this is a merge commit
+        id: check_merge
+        run: |
+          if [[ "$(git log -1 --pretty=%B)" =~ ^Merge.* ]]; then
+            echo "is_merge=true" >> $GITHUB_ENV
+          else
+            echo "is_merge=false" >> $GITHUB_ENV
+          fi
+
+      - name: Exit on merge commit
+        if: env.is_merge == 'true'
+        run: echo "This is a merge commit. Exiting."
+
       - name: Install Newman
         run: npm install -g newman
 
