--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -4,10 +4,8 @@ on:
   push:
     branches:
       - '**' 
-  pull_request:
-    branches:
-      - main
-  workflow_dispatch:
+  # pull_request:
+  # workflow_dispatch:
 
 jobs:
   build:
