--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -83,6 +83,11 @@ jobs:
         env:
           FIREBASE_CONFIG: ${{ secrets.FB_SECRET_KEY }}
           CI: true
+      
+      - name: Run Postman Tests
+        run: |
+          cd postman
+          newman run postman_tests.json
 
       - name: Configure Git User
         run: |
